src/snapshots/yamalyze__tests__e2e_scalar_array.snap
---
source: src/lib.rs
expression: diffs
---
- key: ~
  diff:
    left_value: hello
    right_value:
      - a
      - b
  has_diff: true
  diff_type: Modified
  children: []
