src/snapshots/yamalyze__tests__e2e_scalar_int_keyed_array.snap
---
source: src/lib.rs
assertion_line: 146
expression: diffs
---
- key: ~
  diff:
    left_value: 1
    right_value:
      hi:
        - a
        - b
        - c
  has_diff: true
  diff_type: Modified
  children: []
